--- a/style.css
+++ b/style.css
@@ -223,8 +223,25 @@ input[type=number]::-webkit-outer-spin-button {
     margin-top: 100px;
     margin-bottom: 180px;
     padding-top: 80px;
+    opacity: 0;
+    animation-name: aparicion;
+    animation-duration: 1s;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
   }
   
+  @keyframes aparicion {
+    0%{
+      opacity: 0;
+      transform: scale(1.4) translateY(-20px);
+    }
+
+    100%{
+      opacity: 1;
+      transform: scale(1) translateY(0);
+    }
+  }
+
     
   /*boton del baner*/
   
@@ -304,7 +321,10 @@ input[type=number]::-webkit-outer-spin-button {
     transition-delay: 0.75s;
   }
   
-
+ 
+button{
+  transition: all 1.1s;
+ }
   /*intro*/ 
 
  .intro{
@@ -317,6 +337,11 @@ input[type=number]::-webkit-outer-spin-button {
 
  .center-inicio{
     justify-content: center;
+    animation-name: aparicion;
+    animation-duration: 1s;
+    animation-delay: 0.3s ;
+
+    animation-fill-mode: forwards;
  }
 
  /*flayers*/
@@ -391,8 +416,7 @@ input[type=number]::-webkit-outer-spin-button {
 .articulo img,
 .articulo1 img,
 .articulo2 img{
-  height: 250px;
-  padding-left: 20%;
+  min-width: 350px;
 }
 
 
@@ -406,13 +430,13 @@ input[type=number]::-webkit-outer-spin-button {
 
 .articulo1{
   background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)),url(assets/responsive-2.png);
-
+  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)),url(assets/responsive-0.png);
+  z-index: 2;
   background-size:contain;
   background-repeat: no-repeat;
   background-position: center;
 }
- 
+
 .articulo2{
   background-image: 
   linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973)), url(assets/seo-3.png);
@@ -498,6 +522,14 @@ input[type=number]::-webkit-outer-spin-button {
 .nos hr{
   width: 60%;
     color: #45adc7;
+}
+
+.nos img{
+  transition: all 1.5s;
+}
+.nos img:hover{
+  transform: scale(1.06);
+  
 }
 /*works*/
 
