--- a/styles/style.css
+++ b/styles/style.css
@@ -143,7 +143,7 @@ body::-webkit-scrollbar-thumb{
 }
   
 .offcanvas{
-    background-color: #000000;    
+    background-color: #000000; 
 }
   
 .offcanvas-title{
@@ -521,7 +521,7 @@ body::-webkit-scrollbar-thumb{
 }
 
 .nos{
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
+  
 }
 
 .nos hr{
@@ -542,9 +542,7 @@ body::-webkit-scrollbar-thumb{
 
 .work{
   padding: 50px 0 100px 0;
-  background-image: 
-  linear-gradient(rgb(34, 34, 34), rgba(54, 54, 54, 0.932)),
-  url(/assets/celu-tablet-pc.jpg);
+  background: #161616;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -776,7 +774,7 @@ button{
       }
 
     #bannertop{
-      height: 55vh;
+      height: 60vh;
       padding-top: 100px;
     }
 
