--- a/styles/style.css
+++ b/styles/style.css
@@ -539,19 +539,35 @@ body::-webkit-scrollbar-thumb{
 }
 
 /* works */ 
+.trabajos{
+  background-color: #161616;
+  background-image: 
+  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
+  padding: 25px;
+  box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
+}
+
+body.light .trabajos{
+  background: #f1f1f1;
+  background-image: 
+  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
+  color: #f1f1f1;
+}
 
 .work{
-  padding: 50px 0 100px 0;
   background: #161616;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
+}
 
+body.light .work{
+  background-color: #f1f1f1;
 }
 
 .trabajos img{
-  box-shadow: 2px 4px 200px 200px rgba(23, 44, 48, 0.726);
+  margin-top: 50px;
+  box-shadow: 2px 4px 5px 5px rgba(23, 44, 48, 0.726);
 }
  
 .trabajos hr{
@@ -563,7 +579,7 @@ body::-webkit-scrollbar-thumb{
 /*hablemos*/
   
 .hablemos hr{
-  width: 50%;
+  width: 100%;
   color: #45adc7;
 }
 
