--- a/styles/style.css
+++ b/styles/style.css
@@ -134,7 +134,7 @@ body::-webkit-scrollbar-thumb{
 /*navbar*/
 
 .logo{
-    width: 5em;
+    width: 8em;
 }
 
 .nav-link{
@@ -180,18 +180,20 @@ body::-webkit-scrollbar-thumb{
 }
   
 .offcanvas-title{
-    font-size: 1.5em;
-    color:#fff;
+    font-size: 1.2em;
 }
   
 .offcanvas-title:hover,
 .nav-link:hover{
     color:var(--color-secundario);
 }
-  
+
+.d-lg-none a{
+  color: #f1f1f1;
+}
   
 .d-lg-none a:hover{
-    color: #ffffff;
+    color: #ff0101;
 }
 
 
@@ -497,6 +499,8 @@ body::-webkit-scrollbar-thumb{
 .meet .row{
   align-items: center;
   margin: auto;
+  padding-top: 25px;
+  padding-bottom: 25px;
   
 }
 
