--- a/styles/style.css
+++ b/styles/style.css
@@ -486,32 +486,27 @@ body.light .articulo2 p{
 .articulo2:hover{
   transform: scale(1.03);
 }*/
-
 .paragraph {
-  font-size: 16px;
-  line-height: 2;
+  line-height: 1.5;
 }
+
+/*meet*/ 
+
 
 .meet img{
   max-width: 70%;
-  align-items: center;
-  margin: auto;
   box-shadow: 0px 0px 50px #002d3f94 ;
   border-radius: 5px;
 }
 
-.meet .row{
-  align-items: center;
-  margin: auto;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  
+.image{
+  text-align: center;
 }
 
-.img-center{
-  display: flex;
+.image p{
+  padding-left: 50px;
+  padding-right: 50px;
 }
-
 
 /*about*/
 
@@ -714,7 +709,8 @@ hr{
     opacity: 1;
 }
 
-.intro hr{
+.intro hr,
+.meet hr{
   margin-left: 25%;
 }
 
