--- a/styles/style.css
+++ b/styles/style.css
@@ -555,6 +555,7 @@ body.light .accordion-item{
 
 /* works */ 
 
+
 .trabajos{
   background-image: 
   linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
@@ -572,15 +573,29 @@ body.light .trabajos{
 body.light .work{
   background-color: #f1f1f1;
 }
-
-.trabajos img{
-  margin-top: 50px;
-  box-shadow: 2px 4px 5px 5px rgba(23, 44, 48, 0.726);
-}
  
 .trabajos hr{
-  width: 70%;
+  width: 35%;
   color: var(--color-details);
+}
+
+.work-galery img {
+  width: 100%;
+  transition: 0.5s;
+  margin-bottom: 15px;  
+}
+
+.work-galery iframe{
+  width: 100%;
+}
+.work-galery a{
+  text-decoration: none;
+}
+
+
+.work-galery img:hover{
+  transform: scale(0.98);
+  box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.322);
 }
 
 
