--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,7 @@ body{
 }
 
 body.light{
-  background: rgb(240, 239, 239);
+  background: #f1f1f1;
   color: #000000;
 }
 /*delete select number input*/ 
