--- a/styles/show.css
+++ b/styles/show.css
@@ -40,6 +40,20 @@
 
 .der,
 .izq,
-.low{
+.low,
+.mostrar{
     opacity: 0;
+}
+
+.mostrar{
+  animation: mostrar 2.8s;
+}
+
+@keyframes mostrar {
+   0%{
+    transform: scale(0.3);
+   }
+   100%{
+    transform: scale(1);
+   }
 }
