--- a/styles/contact.css
+++ b/styles/contact.css
@@ -109,8 +109,6 @@ body::-webkit-scrollbar-thumb{
   transform: translateX(0);
 }
 
-/*header*/ 
-
 #header{
     position: fixed !important;
     width: 100%;
@@ -131,6 +129,7 @@ body::-webkit-scrollbar-thumb{
 #fondo{
   color: #f1f1f1;
 }
+
 /*navbar*/
 
 .logo{
@@ -161,15 +160,15 @@ body::-webkit-scrollbar-thumb{
     opacity: 0;
 }
 
-#a-inicio::after{
+#a-contact::after{
   content: "";
-    background-color:var(--color-details);
-    position: absolute;
-    left: 0;
-    top:80%;
-    width: 100%;
-    height: 2px;
-    opacity: 1;
+  background-color:var(--color-details);
+  position: absolute;
+  left: 0;
+  top:80%;
+  width: 100%;
+  height: 2px;
+  opacity: 1;
 }
 
 .navbar-toggler {
@@ -252,6 +251,7 @@ body::-webkit-scrollbar-thumb{
   background: none;
   color: #fff;
 }
+
 /*banner*/ 
 
 #bannertop {
@@ -301,346 +301,6 @@ body::-webkit-scrollbar-thumb{
       opacity: 1;
       transform: scale(1) translateY(0);
     }
-}
-
-/*boton del baner*/
-  
-.btn-neon {
-    margin: 25px 50px 25px 50px;
-    position: relative;
-    display: inline-block;
-    padding: 10px 30px;
-    color: #fff;
-    text-decoration: none;
-    font-size: 20px;
-    font-weight: 600;
-    overflow: hidden;
-    transition: 0.2s;
-    box-shadow: 0px 0px 5px rgb(0, 225, 255);
-}
-  
-.btn-neon:hover{
-    background: var(--color-secundario) ;
-    box-shadow: 0 0 10px var(--color-secundario), 0 0 40px var(--color-secundario), 0 0 80px #bbbbbb !important;
-    transition-delay: 1s;
-    color: #000000;
-}
-  
-.btn-neon span{
-    position: absolute;
-    display: block;
-}
-  
-#span1{
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(90deg, transparent,#bbbbbb);
-}
-  
-.btn-neon:hover #span1{
-    left: 100%;
-    transition: 1s;
-}
-  
-#span3{
-    bottom: 0;
-    right: -100%;
-    width: 100%;
-    height: 2px;
-    background: linear-gradient(270deg, transparent,#bbbbbb);
-}
-
-.btn-neon:hover #span3{
-    right: 100%;
-    transition: 1s;
-    transition-delay: 0.5s;
-}
-
-#span2{
-    top: -100%;
-    right: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(180deg,transparent,#bbbbbb);
-}
-
-.btn-neon:hover #span2{
-    top: 100%;
-    transition: 1s;
-    transition-delay: 0.25s;
-}
-
-#span4{
-    bottom: -100%;
-    left: 0;
-    width: 2px;
-    height: 100%;
-    background: linear-gradient(360deg,transparent,#bbbbbb);
-}
-
-.btn-neon:hover #span4{
-    bottom: 100%;
-    transition: 1s;
-    transition-delay: 0.75s;
-}
-
- /*intro*/ 
-
-.intro{
-  
-    padding-bottom: 40px;
-    padding-top: 50px;
-    text-align: center;
-}
-
-
-.center-inicio{
-    justify-content: center;
-    animation-name: aparicion;
-    animation-duration: 1s;
-    animation-delay: 0.3s ;
-    animation-fill-mode: forwards;
-}
-
-
- /* section flayers*/
-
- .flayers{
-    padding-bottom: 50px; 
-}
-  
-.flayers button{
-  position: relative;
-    display:block;
-    width: 120px;
-    height: 35px;
-    border: none;
-    border-radius: 7px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
-    background-color: var(--color-secundario);
-    margin: auto;
-    font-weight: 600;
-    top: 25px;
-}
-  
-.flayers button:hover{
-    transform: scale(1.06);
-    transition-duration: 0.2s;
-}
-
-.center-flay{
-    justify-content: center;
-}
-
-.flayers h5{
-    color: #fff;
-}
-
-.hide,
-.hide2,
-.hide3{
-  display: none;
-}
-
-.show,
-.show2,
-.show3{
-  display: block;
-}
-
-.articulo,
-.articulo1,
-.articulo2{
-  transition: all 1.5s;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  min-width: 350px;
-  margin:10px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.781);
-  min-height: 300px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
-
-body.light .articulo p,
-body.light .articulo1 p,
-body.light .articulo2 p{
-  color: #f1f1f1;
-}
-
-.articulo {
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.705)),url(/assets/diseño.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-
-}
-
-.articulo1{
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.705)),url(/assets/responsive.jpeg);
-  background-size:cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.articulo2{
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.705)),url(/assets/seo-1080.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-/*.articulo:hover,
-.articulo1:hover,
-.articulo2:hover{
-  transform: scale(1.03);
-}*/
-.paragraph {
-  line-height: 1.5;
-}
-
-/*meet*/ 
-
-.accordion-item{
-  background-color: #ff000000;
-  color: #f1f1f1;
-}
-
-body.light .accordion-item{
-  color: #000000;
-}
-
-.accordion-button{
-  color: var(--color-secundario);
-  background-color: #ff010100;
-  font-size: 1em;
-  font-weight: 500;
-}
-
-.accordion-button:not(.collapsed) {
-  color: var(--color-secundario);
-  background-color:#ff010100;
-}
-
-.accordion-button:focus {
-  z-index: 3;
-  outline: 0;
-  box-shadow:none;
-}
-
-.plus{
-  
-  padding-bottom: 40px;
-  padding-top: 50px;
-  text-align: center;
-}
-
-.plus.light{
-background: #f1f1f1;}
-
-.center-plus{
-  justify-content: center;
-}
-
-/* works */ 
-
-
-.trabajos{
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
-  padding: 25px;
-  box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
-}
-
-body.light .trabajos{
-  background: #f1f1f1;
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
-  color: #f1f1f1;
-}
-
-body.light .work{
-  background-color: #f1f1f1;
-}
- 
-.trabajos hr{
-  width: 35%;
-  color: var(--color-details);
-}
-
-.work-galery img {
-  width: 100%;
-  transition: 0.5s;
-   
-}
-
-.work-galery a{
-  color: var(--color-details);
-}
-
-
-.work-galery img:hover{
-  transform: scale(1.2);
-}
-
-/*section blog*/
-
-.blog-galery{
-   justify-content: center;
-}
-
-.blog-galery img {
-  width: 85%;
-  max-width: 200px;
-  min-height: 150px;
-  transition: 6s;
-  margin-bottom: 15px;  
-}
-
-.blog-galery a{
-  color:#45adc7;
-}
-
-.blog-galery p{
-  color: #f1f1f1;
-}
-
-body.light .blog-galery p{
-  color: #000000;
-}
-
-
-.blog-galery img:hover{
-  transform: scale(0.98);
-  box-shadow: 0px 0px 25px rgba(255, 255, 255, 0.322);
-}
-
-.invita .row{
-  display: flex;
-  place-content: center;
-}
-
-.invita .col-lg-10 {
-  display: flex;
-  place-content: center;
-}
-
-.invita-b{
-  background-image: 
-  linear-gradient(rgba(0, 30, 37, 0.959), rgba(0, 61, 94, 0.973));
-  box-shadow: 0px 0px 10px  rgba(0, 0, 0, 0.781);
-  padding-top: 15px;
-  border-radius: 15px;
-  border: none;
-  color: #f1f1f1;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 /*hablemos*/
@@ -798,12 +458,6 @@ hr{
     opacity: 1;
 }
 
-.intro hr,
-.meet hr,
-.plus hr{
-  margin-left: 25%;
-}
-
 footer hr{
     margin-left: 25%;
     width: 50%;
@@ -814,8 +468,6 @@ footer hr{
 button{
   transition: all 1.1s;
 }
-
-/*media*/ 
 
 @media (max-width:950px) {
   .cursor-dot,
@@ -832,11 +484,6 @@ button{
       width: 15%;
       height: 2px;
       opacity: 0;
-    }
-    .articulo,
-    .articulo1,
-    .articulo2{
-      margin:10px
     }
 
     h3{
@@ -868,16 +515,9 @@ button{
       padding-top: 10vh;
     }
 
-    .flayers{
-      margin:20px
-    }
-
     h3{
       font-size: 1.9em;
     }
 
-    .meet img{
-      max-width: 85%;
-    }
   }
 
